--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,10 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "src/main.ts",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"]
+      "source": "/(.*)",
+      "destination": "src/main.ts"
     }
   ],
   "headers": [
