Agregar swagger-ui-dist a package.json y pnpm-lock.yaml, y configurar archivos estáticos en main.ts para Swagger UI. También se actualiza la configuración de Swagger para incluir recursos personalizados y mejorar la presentación de la documentación de la API.

--- a/vercel.json
+++ b/vercel.json
@@ -34,6 +34,33 @@
           "value": "true"
         }
       ]
+    },
+    {
+      "source": "/docs/(.*\\.js)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/docs/(.*\\.css)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    },
+    {
+      "source": "/docs/(.*\\.png)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "image/png"
+        }
+      ]
     }
   ]
 }
